--- a/interface/client/templates/popupWindows/about.html
+++ b/interface/client/templates/popupWindows/about.html
@@ -8,9 +8,9 @@
             <p>
                 Version {{mist.version}}<br>
                 License {{mist.license}}<br>
-                GitHub <a href="https://github.com/ethereum/mist" target="_blank">github.com/ethereum/mist</a>
+                GitHub <a href="https://github.com/atlaswork/atlasmist" target="_blank">github.com/atlaswork/atlasmist</a>
             </p>
-            <small>Copyright 2017 Ethereum Foundation</small>
+            <small>Copyright 2017 Ethereum Foundation | Copyright 2018 Atlas.Work</small>
         </div>
     </div>
 </template>
